[gd_scene load_steps=8 format=3 uid="uid://gl8ihha2fqun"]

[ext_resource type="PackedScene" uid="uid://bihe0tscs85is" path="res://Bob_simulator/mini_game/scn_game_base.tscn" id="1_tiwf2"]
[ext_resource type="Script" path="res://Bob_simulator/mini_game/mini_yes/script_mini_yes.gd" id="2_35u3m"]
[ext_resource type="PackedScene" uid="uid://dp10yxwn7tipu" path="res://Bob_simulator/mini_game/mini_yes/scn_yes_guy.tscn" id="2_tb5i5"]
[ext_resource type="Environment" uid="uid://ybr4mnvxpjr" path="res://Bob_simulator/mini_game/mini_yes/yes_envi.tres" id="3_742yd"]
[ext_resource type="PackedScene" uid="uid://dd0nk6sfqncra" path="res://Bob_simulator/mini_game/mini_yes/scn_level_1.tscn" id="4_184gl"]
[ext_resource type="Texture2D" uid="uid://rsvp1x53m770" path="res://Bob_simulator/mini_game/mini_yes/tex_pointer.png" id="6_vhenf"]
[ext_resource type="AudioStream" uid="uid://d2i1xq5xv5m3s" path="res://Bob_simulator/mini_game/mini_yes/musique_des_gens_qui_crie.wav" id="7_2tu3t"]

[node name="game_base" instance=ExtResource("1_tiwf2")]

[node name="SubViewportContainer" type="SubViewportContainer" parent="." index="1"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_35u3m")

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer" index="0"]
handle_input_locally = false
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport" index="0"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -196.518, 2.086, 0)
cull_mask = 524288
environment = ExtResource("3_742yd")

[node name="CSGSphere3D" type="CSGSphere3D" parent="SubViewportContainer/SubViewport/Camera3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -50)
visible = false
layers = 524288

[node name="yes_level_1" parent="SubViewportContainer/SubViewport" index="1" instance=ExtResource("4_184gl")]

[node name="SubViewportContainer2" type="SubViewportContainer" parent="." index="2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport3" type="SubViewport" parent="SubViewportContainer2" index="0"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer2/SubViewport3" index="0"]
cull_mask = 131072
environment = ExtResource("3_742yd")

[node name="yes_guy" parent="SubViewportContainer2/SubViewport3/Camera3D" index="0" instance=ExtResource("2_tb5i5")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, -0.2, 0.01)

[node name="SubViewportContainer3" type="SubViewportContainer" parent="." index="3"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport2" type="SubViewport" parent="SubViewportContainer3" index="0"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer3/SubViewport2" index="0"]
cull_mask = 262144

[node name="Sprite3D" type="Sprite3D" parent="SubViewportContainer3/SubViewport2/Camera3D" index="0"]
transform = Transform3D(30, 0, 0, 0, 30, 0, 0, 0, 30, 0, 0, -50)
layers = 262144
billboard = 1
texture = ExtResource("6_vhenf")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="5"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioStreamPlayer2D" index="0"]
stream = ExtResource("7_2tu3t")
autoplay = true
